# docs/swagger.yaml
@@ -372,6 +372,11 @@ components:
         body_html:
           description: HTML content of the template
           type: string
+        body_mjml:
+          description: |-
+            BodyMJML holds the MJML source (optional). If provided, MJML will be
+            compiled to HTML for preview/editing/preview.
+          type: string
         body_text:
           description: Text content of the template
           type: string
@@ -489,6 +494,10 @@ components:
     github_com_headmail_headmail_pkg_api_admin_dto.CreateTemplateRequest:
       properties:
         body_html:
+          type: string
+        body_mjml:
+          description: BodyMJML allows clients to submit MJML source which can be
+            compiled to HTML later.
           type: string
         body_text:
           type: string
@@ -610,6 +619,10 @@ components:
     github_com_headmail_headmail_pkg_api_admin_dto.UpdateTemplateRequest:
       properties:
         body_html:
+          type: string
+        body_mjml:
+          description: BodyMJML allows clients to submit MJML source which can be
+            compiled to HTML later.
           type: string
         body_text:
           type: string
