# pkg/api/admin/dto/template.go
@@ -5,6 +5,8 @@ type CreateTemplateRequest struct {
 	Name     string `json:"name"`
 	BodyHTML string `json:"body_html"`
 	BodyText string `json:"body_text"`
+	// BodyMJML allows clients to submit MJML source which can be compiled to HTML later.
+	BodyMJML string `json:"body_mjml,omitempty"`
 }
 
 // UpdateTemplateRequest defines the request body for updating an existing template.
@@ -12,4 +14,6 @@ type UpdateTemplateRequest struct {
 	Name     string `json:"name"`
 	BodyHTML string `json:"body_html"`
 	BodyText string `json:"body_text"`
+	// BodyMJML allows clients to submit MJML source which can be compiled to HTML later.
+	BodyMJML string `json:"body_mjml,omitempty"`
 }
